--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,11 @@
 ssh module
-move de out of system-modules
-niri
-plasma home manager
+make a common-linux-graphical.nix
+make waybar more usable
+trim system wide plasma
+add plasma hm config
+migrate waybar to templating rather than function
+migrate tmux to templating rather than inline
+migrate lazygit to templating rather than inline
+something about git and ssh
+add mako (notification daemon)
 .dev (bashly based project management) / taskfile + lefthook
